[gd_scene load_steps=6 format=3 uid="uid://cmqxulvt15puc"]

[ext_resource type="Script" uid="uid://crq32xnhwuas2" path="res://UI/ui_scripts/settins_menu_screen.gd" id="1_6oiuu"]
[ext_resource type="Texture2D" uid="uid://4mm25d1h5axu" path="res://UI/theme/environment-preview.png" id="2_mxjxp"]
[ext_resource type="Theme" uid="uid://prtaovx2bp8e" path="res://UI/theme/game_theme.tres" id="3_7vqh3"]
[ext_resource type="Texture2D" uid="uid://bo2syikikvsa6" path="res://UI/theme/player-run-4.png" id="4_6bfs5"]
[ext_resource type="Texture2D" uid="uid://b3hin0p8fxjt6" path="res://UI/theme/crab-walk-3.png" id="5_awyv2"]

[node name="settings_menu_screen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_6oiuu")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.521211, 0.189387, 0.463021, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -327.0
offset_top = -71.0
offset_right = 249.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mxjxp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_7vqh3")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Window_mode_Button" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="resoulution_settings_OptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Main_menu_button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(48, 224)
texture = ExtResource("4_6bfs5")

[node name="Crab-walk-3" type="Sprite2D" parent="."]
position = Vector2(200, 232)
texture = ExtResource("5_awyv2")

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Window_mode_Button" to="." method="_on_window_mode_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/resoulution_settings_OptionButton" to="." method="_on_resoulution_settings_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Main_menu_button" to="." method="_on_main_menu_button_pressed"]
